--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python_version }}
+    - name: Check unicode support
+      run: python -c 'import sys; print(sys.maxunicode)'
     - name: Install cryptography
       run: pip install cryptography
     - name: Install pandas
